Update post-install script after having to use again
I had to do a reinstall.  Despite having not used it in many years, it was not
anywhere near as broken as I would have guessed.

- Delete unused saltstack stuff
- Fix incorrect or changed packages names (and add/remove "aur" when necessary)
- Update to allow running any individual function
- Better group commands and add more shorthand, e.g.:
  - "install" for package installation
  - "config" for symlinking and copying configuration files
- Use local for local variables
- Improve logging
  - Don't clobber old log files
  - Log full output to sectioned org file
  - Allow sharing log file with extra-setup
  - Mention vpn setup must currently be done manually
- Fix group setup by creating groups if they don't exist
- Fix user has password check (previously always prompted to set root password)
- Fix emacs install function
- Don't try to run/setup nix in chroot
- Add pacman group installation method (previously would always reinstall
  groups)
- Remove pip installation method; use pacman for python libraries and pipx for
  binaries
- Fix qmk setup function
- I can no longer install light, so I switched to acpilight
- Fix restow
- Fix playerctld
- Add some extra debug logging to x startup

Tangentially related:
- Make org subscript/superscript req explicit curly braces (default makes logs
  and other files with underscores annoying to read)

--- a/root/boot/README.org
+++ b/root/boot/README.org
@@ -8,6 +8,9 @@ Not sure all these matter but:
   - labeling in gparted labels the filesystem... is there a partition label separate from this?
 - My efi partition is fat32, is labeled =SYSTEM=, and has the =boot= and =esp= flags (don't know if they are necessary for refind)
 
+* Fixing Completely Broken System
+If you happen to have turned off your computer because it completely froze during an update (before hitting yes to continue) due to a newly introduced NVIDIA driver issue and now bash, pacman, and all basic binaries are 0-length and you can't chroot into the system from a live usb... Well it's time for a new install!  See [[../README.org]].
+
 * Fixing Broken Bootloader
 Windows likes to break the bootloader.
 
@@ -21,6 +24,8 @@ If refind doesn't load after this (will just keep going back to boot options or 
 - Get partition overview: =lsblk -o name,label,mountpoint,size=
 - Mount partitions under /mnt, example:
  #+begin_src sh
+# NOTE: this is example and will need to be adjusted depending oncurrent setup
+# (e.g. to prolinux)
 cryptsetup open /dev/disk/by-label/cryptlinux cryptlinux
 mount /dev/cryptlinux_group/root /mnt
 mount /dev/cryptlinux_group/var /mnt/var
