--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -7076,6 +7076,8 @@ All of my org config is in unclean.org.  I will gradually move it here.
          org-hide-emphasis-markers t
          ;; show entities as their symbol (e.g. show \euro as €)
          org-pretty-entities t
+         ;; require {} for sub/superscript after ^/_
+         org-use-sub-superscripts '{}
          ;; until org-appear is fixed
          org-descriptive-links nil
          ;; never show blank line when folding
